[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/ToxicSludgeBin.png" type="Texture" id=1]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://DetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/SludgeCan.gd" type="Script" id=6]
[ext_resource path="res://GoalDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Materials/WhiteEffect.tres" type="Material" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Active",
"speed": 1.5
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Hidden",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "In Air",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Jumping",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 11, 11.5 )

[sub_resource type="CircleShape2D" id=9]
radius = 31.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 9, 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 5.5 )

[sub_resource type="Animation" id=18]
resource_name = "Active"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Active" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/DetectionZone:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "Hidden"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hidden" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite/DetectionZone:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=21]
resource_name = "InAir"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "In Air" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -35 ), Vector2( 0, -50 ), Vector2( 0, -50 ), Vector2( 0, 8.94069e-06 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.3, 0 ), Vector2( 0, 8.94069e-06 ), Vector2( 0.3, 0 ), Vector2( -0.3, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.8, 2 ), Vector2( 2, 2 ), Vector2( 2.8, 2 ), Vector2( 2, 2.4 ), Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "looping_movement"
} ]
}

[sub_resource type="Animation" id=20]
resource_name = "JumpBegin"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jumping" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "agroed"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/DetectionZone:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite/DetectionZone:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="SludgeEnemy" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 2, 2 )
collision_layer = 128
script = ExtResource( 6 )
knockback_modifier = 75.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 8 )
position = Vector2( -0.3, 0 )
frames = SubResource( 7 )
animation = "In Air"
playing = true

[node name="GoalDetection" parent="AnimatedSprite" instance=ExtResource( 7 )]
position = Vector2( 0.3, 0 )
collision_layer = 512
collision_mask = 512

[node name="GoalCol" type="CollisionShape2D" parent="AnimatedSprite/GoalDetection"]
position = Vector2( 0, 1.5 )
shape = SubResource( 17 )

[node name="DetectionZone" parent="AnimatedSprite" instance=ExtResource( 4 )]
position = Vector2( 0.3, 0 )
collision_mask = 2
monitoring = false

[node name="DetectCol" type="CollisionShape2D" parent="AnimatedSprite/DetectionZone"]
shape = SubResource( 9 )

[node name="Hitbox" parent="AnimatedSprite" instance=ExtResource( 3 )]
position = Vector2( 0.3, 0 )
collision_layer = 32
collision_mask = 16

[node name="HitCol" type="CollisionShape2D" parent="AnimatedSprite/Hitbox"]
position = Vector2( 0, 6 )
shape = SubResource( 10 )

[node name="Hurtbox" parent="AnimatedSprite" instance=ExtResource( 2 )]
position = Vector2( 0.3, 0 )
collision_layer = 64
collision_mask = 8
whiten_material = ExtResource( 8 )

[node name="HurtCol" type="CollisionShape2D" parent="AnimatedSprite/Hurtbox"]
position = Vector2( 0, 2 )
shape = SubResource( 11 )

[node name="LeftRay" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 0.3, 11 )
rotation = 1.5708
enabled = true
collision_mask = 2

[node name="RightRay" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 0.3, 11 )
rotation = -1.5708
enabled = true
collision_mask = 2

[node name="LeftAttackDir" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 0.3, 1 )
rotation = 1.5708
scale = Vector2( 8, 1 )
enabled = true
collision_mask = 10

[node name="RightAttackDir" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( 0.3, 2 )
rotation = 4.71239
scale = Vector2( 8, 1 )
enabled = true
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.5 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 10

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 18 )
anims/Hidden = SubResource( 19 )
anims/InAir = SubResource( 21 )
anims/JumpBegin = SubResource( 20 )
anims/RESET = SubResource( 22 )

[connection signal="area_entered" from="AnimatedSprite/GoalDetection" to="." method="_on_GoalDetection_area_entered"]
[connection signal="body_entered" from="AnimatedSprite/DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="area_entered" from="AnimatedSprite/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="AnimatedSprite/Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
